# python_exercises

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/weather_aggregator/: __about__.py  async_weather.py  sync_weather.py
src/weather_aggregator/models/: models.py
src/weather_aggregator/services/: weather_service.py
tests/: __init__.py  test_async_weather.py  test_sync_weather.py
